--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 9191
 spring:
   datasource:
-    url: jdbc:mysql://192.168.200.26:3306/authDB?createDatabaseIfNotExist=true
-    username: sohel
-    password: Remi@123
+    url: jdbc:mysql://***.***.**.**:3306/authDB?createDatabaseIfNotExist=true
+    username: user
+    password: pass
     driver-class-name: com.mysql.jdbc.Driver
     initialization-mode: always
 
